[package]
name = "wasm-twitter-card"
version = "0.3.0"
authors = ["Alessia Bellisario <alessia@bellisar.io>"]
edition = "2018"


[dependencies]
rusttype = "0.8.2"
image = { version = "0.22", default-features = false, features = ["png_codec"] }
glyph_brush_layout = "0.1.8"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
